--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "lint:fix": "eslint . --fix",
     "test": "pnpm -r test",
     "release": "pnpm -r release && changeset publish",
-    "build:package": "pnpm --filter vaul-vue build-only",
+    "build:package": "pnpm --filter former-ui build-only",
     "build:playground": "pnpm build:package && pnpm --filter playground build"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.4",
+    "@antfu/eslint-config": "^2.9.0",
     "@changesets/cli": "^2.27.1",
-    "@playwright/test": "^1.41.2",
-    "@rushstack/eslint-patch": "^1.3.3",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "eslint": "^8.56.0",
+    "@playwright/test": "^1.42.1",
+    "@rushstack/eslint-patch": "^1.8.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "eslint": "^8.57.0",
     "prettier": "^3.2.5"
   }
 }
