--- a/playground/package.json
+++ b/playground/package.json
@@ -13,21 +13,21 @@
     "test": "pnpm run test:e2e"
   },
   "dependencies": {
-    "@geprog/vue-formkit-schema-wizard": "workspace:*",
-    "vue": "^3.4.5",
-    "vue-router": "4"
+    "former-ui": "workspace:*",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.2",
-    "@types/node": "^18.19.3",
-    "@vitejs/plugin-vue": "^4.5.2",
-    "@vue/tsconfig": "^0.5.0",
-    "autoprefixer": "^10.4.16",
-    "npm-run-all2": "^6.1.1",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "typescript": "~5.3.0",
-    "vite": "^5.0.10",
-    "vue-tsc": "^1.8.25"
+    "@tsconfig/node20": "^20.1.3",
+    "@types/node": "^20.11.30",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.19",
+    "npm-run-all2": "^6.1.2",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.6",
+    "vue-tsc": "^2.0.7"
   }
 }
