--- a/playground/tsconfig.node.json
+++ b/playground/tsconfig.node.json
@@ -7,10 +7,5 @@
     "types": ["node"],
     "noEmit": true
   },
-  "include": [
-    "vite.config.*",
-    "vitest.config.*",
-    "cypress.config.*",
-    "nightwatch.conf.*",
-    "playwright.config.*"]
+  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "nightwatch.conf.*", "playwright.config.*"]
 }
