--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "eslint . --fix",
     "test": "pnpm -r test",
     "release": "pnpm -r release && changeset publish",
+    "format:check": "prettier --check .",
     "build:package": "pnpm --filter former-ui build-only",
     "build:playground": "pnpm build:package && pnpm --filter playground build"
   },
