--- a/packages/former/tsconfig.app.json
+++ b/packages/former/tsconfig.app.json
@@ -4,7 +4,7 @@
     "composite": true,
     "baseUrl": "../..",
     "paths": {
-      "@/*": ["./src/*"]
+      "~/*": ["./src/*"]
     },
     "noEmit": true
   },
