--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,7 +25,7 @@ jobs:
         run: pnpm install
 
       - name: Copy README from root
-        run: cp README.md packages/vaul-vue/README.md
+        run: cp README.md packages/form-ui/README.md
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
