--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -1,8 +1,9 @@
 {
   "name": "former-ui",
-  "type": "module",
   "version": "0.0.1",
   "repository": "https://github.com/geprog/former",
+  "type": "module",
+  "license": "MIT",
   "keywords": [
     "vue",
     "vue3",
@@ -12,12 +13,13 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.cjs"
     }
   },
-  "main": "./dist/index.umd.cjs",
-  "module": "./dist/index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
     "README.md",
@@ -25,42 +27,53 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
+    "build": "vite build",
+    "prepack": "pnpm build",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test:unit": "vitest",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/",
-    "release": "pnpm run build-only"
+    "test:format": "prettier --check .",
+    "test:types": "vue-tsc --build --force",
+    "release": "pnpm -r release && changeset publish"
   },
   "dependencies": {
-    "@tsconfig/node20": "^20.1.3",
     "@vueuse/integrations": "^10.9.0",
-    "sortablejs": "^1.15.2"
+    "sortablejs": "^1.15.2",
+    "vite-plugin-css-injected-by-js": "^3.5.0",
+    "vite-plugin-dts": "^3.8.0"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.9.0",
+    "@changesets/cli": "^2.27.1",
     "@formkit/core": "^1.6.0",
     "@formkit/icons": "^1.6.0",
     "@formkit/vue": "^1.6.0",
+    "@playwright/test": "^1.42.1",
+    "@rushstack/eslint-patch": "^1.8.0",
+    "@tsconfig/node20": "^20.1.3",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^18.19.3",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.3",
     "@vue/tsconfig": "^0.5.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^23.0.1",
-    "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-css-injected-by-js": "^3.3.1",
-    "vite-plugin-dts": "^3.7.3",
+    "vite": "^5.2.6",
     "vitest": "^1.4.0",
     "vue": "^3.4.21",
     "vue-tsc": "^2.0.7"
+  },
+  "peerDependencies": {
+    "@formkit/core": "^1.6.0",
+    "@formkit/icons": "^1.6.0",
+    "@formkit/vue": "^1.6.0",
+    "vue": "^3.0.0"
   }
 }
