--- a/packages/former/tsconfig.build.json
+++ b/packages/former/tsconfig.build.json
@@ -8,7 +8,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "paths": {
-      "@/*": ["src/*"]
+      "~/*": ["src/*"]
     },
     "resolveJsonModule": true,
     "strict": true,
