--- a/playground/package.json
+++ b/playground/package.json
@@ -5,12 +5,9 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "test:e2e": "playwright test",
-    "test": "pnpm run test:e2e"
+    "build": "vite build",
+    "test:types": "vue-tsc --build --force",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "@formkit/core": "^1.6.0",
@@ -26,7 +23,6 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
-    "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.3",
