--- a/packages/former/tsconfig.node.json
+++ b/packages/former/tsconfig.node.json
@@ -7,5 +7,5 @@
     "types": ["node"],
     "noEmit": true
   },
-  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "nightwatch.conf.*", "playwright.config.*"]
+  "include": ["vite.config.*", "vitest.config.*", "playwright.config.*"]
 }
