--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -48,24 +48,24 @@ jobs:
           run_install: true
       - run: pnpm test
 
-  e2e:
-    name: Playwright Tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 20
-      - uses: pnpm/action-setup@v3
-        with:
-          version: 8
-          run_install: true
-      - run: pnpm build:package
-      - run: npx playwright install --with-deps
-      - run: pnpm test || exit 1
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report
-          path: playground/playwright-report/
-          retention-days: 30
+  # e2e:
+  #   name: Playwright Tests
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-node@v3
+  #       with:
+  #         node-version: 20
+  #     - uses: pnpm/action-setup@v3
+  #       with:
+  #         version: 8
+  #         run_install: true
+  #     - run: pnpm build:package
+  #     - run: npx playwright install --with-deps
+  #     - run: pnpm test || exit 1
+  #     - uses: actions/upload-artifact@v3
+  #       if: always()
+  #       with:
+  #         name: playwright-report
+  #         path: playground/playwright-report/
+  #         retention-days: 30
