--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: packages/playground/dist
+          path: playground/dist
 
   deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
