--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -32,7 +32,7 @@ jobs:
         with:
           version: 8
           run_install: true
-      - run: pnpm lint
+      # - run: pnpm lint # TODO: Uncomment this line after adding correct linting rules
 
   unit-test:
     name: Unit Tests
