--- a/packages/former/tsconfig.app.json
+++ b/packages/former/tsconfig.app.json
@@ -2,9 +2,8 @@
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "compilerOptions": {
     "composite": true,
-    "baseUrl": "../..",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["src/*"]
     },
     "noEmit": true
   },
