--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "packageManager": "pnpm@8.14.1",
   "scripts": {
-    "dev": "pnpm -r dev",
+    "dev": "pnpm -r --parallel dev",
     "lint": "eslint .",
     "test": "pnpm -r test",
     "release": "pnpm -r release && changeset publish",
