--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -1,7 +1,10 @@
 {
   "name": "former-ui",
-  "version": "0.0.2",
-  "repository": "https://github.com/geprog/former",
+  "version": "0.0.3",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/geprog/former.git"
+  },
   "type": "module",
   "license": "MIT",
   "keywords": [
@@ -33,7 +36,7 @@
     "test:unit": "vitest",
     "test:format": "prettier --check .",
     "test:types": "vue-tsc --build --force",
-    "release": "pnpm -r release && npm publish"
+    "release": "pnpm build && npm publish"
   },
   "dependencies": {
     "@vueuse/integrations": "^10.9.0",
