--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -16,14 +16,14 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
+      "types": "./dist/former/src/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.umd.cjs"
     }
   },
   "main": "./dist/index.umd.cjs",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/former/src/index.d.ts",
   "files": [
     "README.md",
     "dist"
