feat: element selection and text options editing (#6)
Co-authored-by: Lukas <lukas@slucky.de>

--- a/packages/former/tsconfig.build.json
+++ b/packages/former/tsconfig.build.json
@@ -4,11 +4,10 @@
     "target": "esnext",
     "jsx": "preserve",
     "lib": ["esnext", "dom"],
-    "baseUrl": ".",
     "module": "esnext",
     "moduleResolution": "node",
     "paths": {
-      "~/*": ["src/*"]
+      "~/*": ["./src/*"]
     },
     "resolveJsonModule": true,
     "strict": true,
