--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -1,7 +1,10 @@
 {
   "name": "former-ui",
-  "version": "0.0.1",
-  "repository": "https://github.com/geprog/former",
+  "version": "0.0.6",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/geprog/former.git"
+  },
   "type": "module",
   "license": "MIT",
   "keywords": [
@@ -13,14 +16,14 @@
   ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
+      "types": "./dist/former/src/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.umd.cjs"
     }
   },
   "main": "./dist/index.umd.cjs",
   "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/former/src/index.d.ts",
   "files": [
     "README.md",
     "dist"
@@ -33,7 +36,7 @@
     "test:unit": "vitest",
     "test:format": "prettier --check .",
     "test:types": "vue-tsc --build --force",
-    "release": "pnpm -r release && npm publish"
+    "release": "pnpm build && npm publish"
   },
   "dependencies": {
     "@vueuse/integrations": "^10.9.0",
