feat: add useFocusTrap and vueuse/core packages

--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   },
   "devDependencies": {
     "prettier": "^3.2.5"
+  },
+  "dependencies": {
+    "@vueuse/core": "^10.9.0",
+    "focus-trap": "^7"
   }
 }
