--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -39,34 +39,34 @@
     "release": "pnpm build && npm publish"
   },
   "dependencies": {
-    "@vueuse/integrations": "^10.9.0",
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/integrations": "^10.11.0",
+    "focus-trap": "^7.5.4",
     "sortablejs": "^1.15.2",
-    "vite-plugin-css-injected-by-js": "^3.5.0",
-    "vite-plugin-dts": "^3.8.0",
-    "@vueuse/core": "^10.9.0",
-    "focus-trap": "^7.5.4"
+    "vite-plugin-css-injected-by-js": "^3.5.1",
+    "vite-plugin-dts": "^3.9.1"
   },
   "devDependencies": {
-    "@formkit/core": "^1.6.0",
-    "@formkit/icons": "^1.6.0",
-    "@formkit/vue": "^1.6.0",
-    "@tsconfig/node20": "^20.1.3",
-    "@types/jsdom": "^21.1.6",
-    "@types/node": "^18.19.3",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/test-utils": "^2.4.3",
-    "@vue/tsconfig": "^0.5.0",
+    "@formkit/core": "^1.6.5",
+    "@formkit/icons": "^1.6.5",
+    "@formkit/vue": "^1.6.5",
+    "@tsconfig/node20": "^20.1.4",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^18.19.34",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.49.0",
-    "jsdom": "^23.0.1",
+    "eslint": "^8.57.0",
+    "jsdom": "^23.2.0",
     "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.6",
-    "vitest": "^1.4.0",
-    "vue": "^3.4.21",
-    "vue-tsc": "^2.0.7"
+    "prettier": "^3.3.2",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5",
+    "vite": "^5.3.0",
+    "vitest": "^1.6.0",
+    "vue": "^3.4.27",
+    "vue-tsc": "^2.0.21"
   },
   "peerDependencies": {
     "@formkit/core": "^1.6.0",
