--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -28,7 +28,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "vite",
     "build": "vite build",
     "prepack": "pnpm build",
     "lint": "eslint .",
