--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -1,6 +1,6 @@
 {
   "name": "former-ui",
-  "version": "0.0.10",
+  "version": "0.0.11-next.6",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/geprog/former.git"
@@ -48,6 +48,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
+    "vite-plugin-css-injected-by-js": "^3.5.0",
+    "vite-plugin-dts": "^3.8.0",
     "vue": "^3.4.21",
     "vue-tsc": "^2.0.11"
   },
