--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^20.12.5",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
+    "@vueuse/core": "^10.9.0",
     "autoprefixer": "^10.4.19",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
