--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -1,6 +1,6 @@
 {
   "name": "former-ui",
-  "version": "0.0.11-next.15",
+  "version": "0.0.11-next.18",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/geprog/former.git"
@@ -40,17 +40,23 @@
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
+    "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
     "@vueuse/core": "^10.9.0",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.9.1",
+    "jsdom": "^25.0.0",
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "sortablejs": "^1.15.3",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-css-injected-by-js": "^3.5.0",
     "vite-plugin-dts": "^3.8.0",
+    "vitest": "^2.0.5",
     "vue": "^3.4.21",
     "vue-tsc": "^2.0.11"
   },
