--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -38,6 +38,7 @@
     "release": "pnpm build && npm publish"
   },
   "devDependencies": {
+    "@shopify/draggable": "^1.1.3",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.12.5",
     "@types/sortablejs": "^1.15.8",
@@ -50,7 +51,6 @@
     "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
-    "sortablejs": "^1.15.3",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
