--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1-next.0",
   "private": true,
   "scripts": {
     "dev": "pnpm -r --parallel dev",
