--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "lint": "eslint .",
     "test": "pnpm -r test",
     "release": "pnpm -r release && changeset publish",
-    "format:check": "prettier --check .",
     "build": "pnpm -r build"
   },
   "devDependencies": {
-    "prettier": "^3.2.5"
+    "@antfu/eslint-config": "^3.6.2",
+    "eslint": "^9.9.1",
+    "eslint-plugin-format": "^0.1.2"
   }
 }
