--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "pnpm -r --parallel dev",
     "lint": "eslint .",
     "test": "pnpm -r test",
+    "typecheck": "pnpm -r typecheck",
     "release": "pnpm -r release && changeset publish",
     "build": "pnpm -r build"
   },
