--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -1,17 +1,16 @@
 {
   "name": "former-ui",
-  "version": "0.0.10",
+  "type": "module",
+  "version": "0.0.11-next.51",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/geprog/former.git"
   },
-  "type": "module",
-  "license": "MIT",
   "keywords": [
     "vue",
     "vue3",
-    "formkit",
-    "formbuilder",
+    "form-builder",
     "forms"
   ],
   "exports": {
@@ -29,49 +28,39 @@
     "dist"
   ],
   "scripts": {
-    "dev": "vite build --watch",
+    "dev": "vite",
     "build": "vite build",
     "prepack": "pnpm build",
-    "lint": "eslint .",
-    "test:unit": "vitest",
-    "test:format": "prettier --check .",
-    "test:types": "vue-tsc --build --force",
-    "release": "pnpm build && npm publish"
-  },
-  "dependencies": {
-    "@vueuse/integrations": "^10.9.0",
-    "sortablejs": "^1.15.2",
-    "vite-plugin-css-injected-by-js": "^3.5.0",
-    "vite-plugin-dts": "^3.8.0",
-    "@vueuse/core": "^10.9.0",
-    "focus-trap": "^7.5.4"
-  },
-  "devDependencies": {
-    "@formkit/core": "^1.6.0",
-    "@formkit/icons": "^1.6.0",
-    "@formkit/vue": "^1.6.0",
-    "@tsconfig/node20": "^20.1.3",
-    "@types/jsdom": "^21.1.6",
-    "@types/node": "^18.19.3",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/test-utils": "^2.4.3",
-    "@vue/tsconfig": "^0.5.0",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.49.0",
-    "jsdom": "^23.0.1",
-    "postcss": "^8.4.38",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.6",
-    "vitest": "^1.4.0",
-    "vue": "^3.4.21",
-    "vue-tsc": "^2.0.7"
+    "test": "vitest --pass-with-no-tests",
+    "typecheck": "vue-tsc --build --force",
+    "release": "pnpm build && npm publish",
+    "build:playground": "vite build --config vite.config.playground.ts",
+    "preview:playground": "vite preview --config vite.config.playground.ts"
   },
   "peerDependencies": {
-    "@formkit/core": "^1.6.0",
-    "@formkit/icons": "^1.6.0",
-    "@formkit/vue": "^1.6.0",
     "vue": "^3.0.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^20.12.5",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/tsconfig": "^0.5.1",
+    "@vueuse/core": "^10.9.0",
+    "autoprefixer": "^10.4.19",
+    "jsdom": "^25.0.0",
+    "npm-run-all2": "^6.1.2",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1",
+    "typescript": "~5.4.0",
+    "vite": "^5.2.8",
+    "vite-plugin-css-injected-by-js": "^3.5.0",
+    "vite-plugin-dts": "^3.8.0",
+    "vitest": "^2.0.5",
+    "vue": "^3.4.21",
+    "vue-tsc": "^2.0.11"
   }
 }
