--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "pnpm -r test",
     "typecheck": "pnpm -r typecheck",
     "release": "pnpm -r release && changeset publish",
+    "prerelease": "pnpm -r prerelease && changeset publish",
     "build": "pnpm -r build"
   },
   "devDependencies": {
