--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   release:
-    name: Release client
+    name: Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
