--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -54,7 +54,7 @@ jobs:
         if: 'github.ref_type == ''tag'''
 
       - name: Release
-        working-directory: packages/client/
+        working-directory: packages/former/
         run: pnpm publish --no-git-check --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
