--- a/.github/workflows/playground.yaml
+++ b/.github/workflows/playground.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           version: 9
           run_install: true
-      - run: pnpm -r build:playground
+      - run: pnpm -r build:playground --base './'
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
