--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "pnpm": ">=9.0.0",
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "dev": "pnpm -r --parallel dev",
     "lint": "eslint .",
@@ -10,8 +14,8 @@
     "build": "pnpm -r build"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.6.2",
-    "eslint": "^9.9.1",
-    "eslint-plugin-format": "^0.1.2"
+    "@antfu/eslint-config": "3.11.2",
+    "eslint": "9.15.0",
+    "eslint-plugin-format": "0.1.2"
   }
 }
