--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -27,6 +27,10 @@
     "README.md",
     "dist"
   ],
+  "engines": {
+    "pnpm": ">=9.0.0",
+    "node": ">=22.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -40,26 +44,23 @@
     "vue": "^3.0.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "4.17.21"
   },
   "devDependencies": {
-    "@tsconfig/node22": "^22.0.0",
-    "@types/lodash": "^4.17.7",
-    "@types/node": "^22.9.1",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/tsconfig": "^0.5.1",
-    "@vueuse/core": "^10.9.0",
-    "autoprefixer": "^10.4.19",
-    "jsdom": "^25.0.0",
-    "npm-run-all2": "^6.1.2",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.1",
-    "typescript": "~5.4.0",
-    "vite": "^5.2.8",
-    "vite-plugin-css-injected-by-js": "^3.5.0",
-    "vite-plugin-dts": "^3.8.0",
-    "vitest": "^2.0.5",
-    "vue": "^3.4.21",
-    "vue-tsc": "^2.0.11"
+    "@tsconfig/node22": "22.0.0",
+    "@types/lodash": "4.17.13",
+    "@types/node": "22.10.1",
+    "@vitejs/plugin-vue": "5.2.1",
+    "@vue/tsconfig": "0.7.0",
+    "@vueuse/core": "12.0.0",
+    "autoprefixer": "10.4.20",
+    "tailwindcss": "3.4.15",
+    "typescript": "5.7.2",
+    "vite": "6.0.1",
+    "vite-plugin-css-injected-by-js": "3.5.2",
+    "vite-plugin-dts": "4.3.0",
+    "vitest": "2.1.6",
+    "vue": "3.5.13",
+    "vue-tsc": "2.1.10"
   }
 }
