--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,9 +4,6 @@
 
 # Learn more from ready-to-use templates: https://www.gitpod.io/docs/introduction/getting-started/quickstart
 
-env:
-  __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS: $GITPOD_WORKSPACE_URL
-
 tasks:
   - name: Setup gitpod env
     before: |
@@ -15,6 +12,7 @@ tasks:
       npm install -g pnpm@9
       nvm alias default 22
       echo "nvm use default &>/dev/null" >> ~/.bashrc.d/51-nvm-fix
+      echo "export __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS=$GITPOD_WORKSPACE_URL" >> ~/.bashrc.d/52-vite-config
 
     init: pnpm install && pnpm run build
     command: pnpm run dev
