--- a/packages/former/tsconfig.app.json
+++ b/packages/former/tsconfig.app.json
@@ -7,6 +7,6 @@
     },
     "noEmit": true
   },
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "../playground/src/App.vue"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "exclude": ["src/**/__tests__/*"]
 }
