--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -9,9 +9,7 @@
     "prepack": "pnpm build",
     "test": "vitest --pass-with-no-tests",
     "typecheck": "vue-tsc --build --force",
-    "preview": "vite preview --strictPort",
-    "build:playground": "vite build --config vite.config.playground.ts",
-    "preview:playground": "vite preview --config vite.config.playground.ts"
+    "preview": "vite preview --strictPort"
   },
   "dependencies": {
     "@vueuse/core": "12.0.0",
