ci: deploy playground from packages/playground/dist ci: remove  deploy-playground.yml

--- a/.github/workflows/playground.yaml
+++ b/.github/workflows/playground.yaml
@@ -21,11 +21,14 @@ jobs:
         with:
           version: 9
           run_install: true
-      - run: pnpm -r build:playground --base './'
+      - name: Build library (former)
+        run: pnpm -F former build
+      - name: Build playground
+        run: pnpm -F former-playground build
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: packages/former/dist-playground
+          path: packages/playground/dist
 
   deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
