--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -13,16 +13,9 @@
     "form-builder",
     "forms"
   ],
-  "exports": {
-    ".": {
-      "types": "./dist/former/src/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs"
-    }
-  },
   "main": "./dist/index.umd.cjs",
   "module": "./dist/index.js",
-  "types": "./dist/former/src/index.d.ts",
+  "types": "./dist/index.d.ts",
   "files": [
     "README.md",
     "dist"
@@ -32,7 +25,6 @@
     "node": ">=22.0.0"
   },
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
     "prepack": "pnpm build",
     "test": "vitest --pass-with-no-tests",
