--- a/packages/playground/tsconfig.node.json
+++ b/packages/playground/tsconfig.node.json
@@ -1,9 +1,11 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "@tsconfig/node22/tsconfig.json",
   "compilerOptions": {
     "composite": true,
-    "lib": ["ES2020"],
-    "types": ["node"]
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "types": ["node"],
+    "noEmit": true
   },
   "include": ["vite.config.ts"]
 }
