--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -32,7 +32,7 @@ jobs:
         with:
           version: 9
           run_install: true
-      - run: pnpm test
+      - run: pnpm typecheck
 
   unit-test:
     name: Unit Tests
