--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -32,6 +32,7 @@ jobs:
         with:
           version: 9
           run_install: true
+      - run: pnpm build
       - run: pnpm typecheck
 
   unit-test:
