Separate playground from former (#82)
Co-authored-by: mariusheine <m.heine@geprog.com>

--- a/.github/workflows/playground.yaml
+++ b/.github/workflows/playground.yaml
@@ -21,11 +21,12 @@ jobs:
         with:
           version: 9
           run_install: true
-      - run: pnpm -r build:playground --base './'
+      - name: Build
+        run: pnpm build
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: packages/former/dist-playground
+          path: packages/playground/dist
 
   deploy:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
