--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@vueuse/core": "12.0.0",
     "former-ui": "workspace:*",
+    "preset-nuxt-ui": "workspace:*",
     "vue": "^3.5.13"
   },
   "devDependencies": {
