--- a/packages/preset-nuxt-ui/package.json
+++ b/packages/preset-nuxt-ui/package.json
@@ -3,12 +3,12 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/schemaComponent.d.ts",
-      "import": "./dist/schemaComponent.js"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     }
   },
-  "module": "./dist/schemaComponent.js",
-  "types": "./dist/schemaComponent.d.ts",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": ["dist"],
 
   "scripts": {
@@ -16,17 +16,17 @@
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "peerDependencies": {
-    "@nuxt/ui": "^2.0.0",
+    "@nuxt/ui": "^3.3.4",
     "former-ui": ">=0.0.0",
-    "vue": "^3.3.0"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@nuxt/ui": "^2.14.1",
+    "@nuxt/ui": "^3.3.4",
     "@vitejs/plugin-vue": "^5.0.0",
     "former-ui": "workspace:*",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
     "vite-plugin-dts": "^4.3.0",
-    "vue": "^3.5.0"
+    "vue": "^3.5.13"
   }
 }
