feat(playground): add Nuxt UI 3.3.4 & Tailwind v4

--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -12,12 +12,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nuxt/ui": "^3.3.4",
+    "@unhead/vue": "^1",
     "@vueuse/core": "12.0.0",
     "former-ui": "workspace:*",
     "preset-nuxt-ui": "workspace:*",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@tsconfig/node22": "22.0.0",
     "@types/lodash": "4.17.13",
     "@types/node": "22.10.1",
@@ -25,10 +29,12 @@
     "@vue/tsconfig": "0.7.0",
     "@vueuse/core": "12.0.0",
     "autoprefixer": "10.4.20",
-    "tailwindcss": "3.4.16",
+    "tailwindcss": "4.1.13",
     "typescript": "5.7.2",
-    "vite": "6.1.6",
+    "vite": "^6.1.6",
     "vite-plugin-css-injected-by-js": "3.5.2",
+    "vite@3.3.4": "link:@nuxt/ui/vite@3.3.4",
+    "vite@latest": "link:@nuxt/ui/vite@latest",
     "vitest": "2.1.9",
     "vue": "3.5.13",
     "vue-tsc": "3.0.7"
