--- a/packages/preset-nuxt-ui/tsconfig.json
+++ b/packages/preset-nuxt-ui/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "composite": true,
     "target": "ES2020",
-    "lib": ["ES2020"],
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "rootDir": "src",
     "module": "ESNext",
     "moduleResolution": "Bundler",
