fix: Lint + Typecheck

--- a/packages/preset-nuxt-ui/tsconfig.json
+++ b/packages/preset-nuxt-ui/tsconfig.json
@@ -10,7 +10,10 @@
     "declaration": true,
     "emitDeclarationOnly": false,
     "outDir": "dist",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.vue"]
 }
