--- a/packages/preset-nuxt-ui/package.json
+++ b/packages/preset-nuxt-ui/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@former-ui/preset-nuxt-ui",
+  "version": "0.0.0",
   "type": "module",
   "exports": {
     ".": {
@@ -13,6 +14,7 @@
 
   "scripts": {
     "build": "vite build",
+    "prepare": "vite build",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "peerDependencies": {
