--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -16,7 +16,7 @@
     "@unhead/vue": "^1",
     "@vueuse/core": "12.0.0",
     "former-ui": "workspace:*",
-    "preset-nuxt-ui": "workspace:*",
+    "@former-ui/preset-nuxt-ui": "workspace:*",
     "vue": "^3.5.13",
     "vue-router": "^4"
   },
