--- a/packages/preset-nuxt-ui/tsconfig.json
+++ b/packages/preset-nuxt-ui/tsconfig.json
@@ -1,18 +1,16 @@
 {
   "compilerOptions": {
     "composite": true,
-    "target": "ES2020",
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "rootDir": "src",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "paths": { "@/*": ["./src/*"] },
+    "moduleResolution": "bundler",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
+    "types": ["vite/client"],
     "strict": true,
-    "declaration": true,
-    "emitDeclarationOnly": false,
-    "outDir": "dist",
-
+    "noEmit": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts", "src/**/*.vue", "src/env.d.ts"]
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "auto-imports.d.ts", "components.d.ts"]
 }
