--- a/packages/former/package.json
+++ b/packages/former/package.json
@@ -13,9 +13,14 @@
     "form-builder",
     "forms"
   ],
-  "main": "./dist/index.umd.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs"
+    },
+    "./former-ui.css": "./dist/index.css"
+  },
   "files": [
     "README.md",
     "dist"
@@ -47,7 +52,6 @@
     "tailwindcss": "3.4.16",
     "typescript": "5.7.2",
     "vite": "6.4.1",
-    "vite-plugin-css-injected-by-js": "3.5.2",
     "vite-plugin-dts": "4.3.0",
     "vitest": "2.1.9",
     "vue": "3.5.13",
