--- a/.github/workflows/playground.yaml
+++ b/.github/workflows/playground.yaml
@@ -13,13 +13,12 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
-          node-version: 22
+          node-version-file: package.json
       - uses: pnpm/action-setup@v4
         with:
-          version: 9
           run_install: true
       - name: Build
         run: pnpm build
