--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
+  "packageManager": "pnpm@10.26.0+sha512.3b3f6c725ebe712506c0ab1ad4133cf86b1f4b687effce62a9b38b4d72e3954242e643190fc51fa1642949c735f403debd44f5cb0edd657abe63a8b6a7e1e402",
   "engines": {
-    "pnpm": ">=9.0.0",
-    "node": ">=22.0.0"
+    "pnpm": "10",
+    "node": "24"
   },
   "scripts": {
     "dev": "pnpm -r --parallel dev",
