chore: set pnpm supply chain security options

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,7 @@
+minimumReleaseAge: 1440
+trustPolicy: no-downgrade
+trustPolicyIgnoreAfter: 43830
+strictPeerDependencies: true
 packages:
   - 'packages/*'
   - playground
